Add master data form

--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Master", "MasterCampaign", "CampaignForm")</li>
                     <li>@Html.ActionLink("Child", "ChildCampaign", "CampaignForm")</li>
                     <li>@Html.ActionLink("Tactic", "TacticCampaign", "CampaignForm")</li>
+                    <li>@Html.ActionLink("Master Data", "MasterData", "MasterData")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
