--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -15,8 +15,9 @@
             <!-- SELECT2 EXAMPLE -->
             <div class="box box-default">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Tactic Campaign</h3>
-
+                    
+                    <h3 class="box-title" style="padding:10px 7px 0px 0px">Tactic Campaign</h3>
+                    <hr />
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
