update model and views

--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -5,6 +5,26 @@
 
 <div class="jumbotron">
     <h1>Welcome MRM</h1>
+
+
+
+    <div class="row">
+        <div class="col-md-4">
+            @Html.ActionLink("Master Campaign", "MasterCampaign", "MasterCampaign",new { @class = "btn btn-block btn-primary btn-lg" })
+        </div>
+        <div class="col-md-4">
+           @Html.ActionLink("Child Campaign", "ChildCampaign", "ChildCampaign", new { @class = "btn btn-block btn-primary btn-lg" })
+        </div>
+        <div class="col-md-4">
+           @Html.ActionLink("Tactic Campaign", "TacticCampaign", "TacticCampaign", new { @class = "btn btn-block btn-primary btn-lg" })
+        </div>
+    </div>
+
+   
     
 </div>
+
+
+
+
 
