--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -24,17 +24,13 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Business Group*</label>
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.BusinessGroup, new SelectList(m.BusinessGroup, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Segment*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Segment, new SelectList(m.Segment, "Value", "Text"))
                             </div>
 
                             <!-- /.form-group -->
@@ -44,18 +40,14 @@
                             <div class="form-group">
                                 <label>Business Line*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.BusinessLine, new SelectList(m.BusinessLine, "Value", "Text"))
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Geography*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Geography, new SelectList(m.Geography, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -64,18 +56,14 @@
                             <div class="form-group">
                                 <label>Industry*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                               @Html.DropDownListFor(m => m.Industry, new SelectList(m.Industry, "Value", "Text"))
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Theme</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Theme, new SelectList(m.Theme, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -85,14 +73,14 @@
                             <div class="form-group">
                                 <label>Budget</label>
 
-                                <input type='text' class='form-control'>
+                                @Html.TextBox(m => m.Budget, new { @class = "form-control" })
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Spend*</label>
 
-                                <input type='text' class='form-control'>
+                                @Html.TextBox(m => m.Spend, new { @class = "form-control" })
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -100,36 +88,33 @@
                             <div class="form-group">
                                 <label>Target New Pilpeline*</label>
 
-                                <input type='text' class='form-control'>
+                                @Html.TextBox(m => m.TargetNewPilpeline, new { @class = "form-control" })
 
                             </div>
                             <div class="form-group">
                                 <label>Target Touch Pilpeline*</label>
-
-                                <input type='text' class='form-control'>
-
+                                                               
+                                @Html.TextBox(m => m.TargetTouchPilpeline, new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Child Champaign Name*</label>
-
-                                <input type='text' class='form-control'>
-
+                                                             
+                                @Html.TextBox(m => m.ChildChampaignName, new { @class = "form-control" })
                             </div>
                             <div class="form-group">
                                 <label>Child Champaign Naming*</label>
-
-                                <input type='text' class='form-control' readonly="readonly" value="ABCD">
-
+                                                              
+                                @Html.TextBox(m => m.ChildChampaignNaming, new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Child Champaign Description*</label>
 
-                                <input type='text' class='form-control'>
-
+                             
+                                @Html.TextBox(m => m.ChildChampaignDescription, new { @class = "form-control" })
                             </div>
                          
                         </div>
