--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -25,17 +25,13 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Business Group*</label>
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                               @Html.DropDownListFor(m => m.BusinessGroup, new SelectList(m.BusinessGroup, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Segment*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                               @Html.DropDownListFor(m => m.Segment, new SelectList(m.Segment, "Value", "Text"))
                             </div>
 
                             <!-- /.form-group -->
@@ -45,18 +41,14 @@
                             <div class="form-group">
                                 <label>Business Line*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.BusinessLine, new SelectList(m.BusinessLine, "Value", "Text"))
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Geography*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Geography, new SelectList(m.Geography, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -65,18 +57,14 @@
                             <div class="form-group">
                                 <label>Industry*</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Industry, new SelectList(m.Industry, "Value", "Text"))
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Theme</label>
 
-                                <select class="form-control">
-                                    <option value="1" selected="selected">--Select--</option>
-                                </select>
+                                @Html.DropDownListFor(m => m.Theme, new SelectList(m.Theme, "Value", "Text"))
                             </div>
                             <!-- /.form-group -->
                         </div>
@@ -85,44 +73,39 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Year*</label>
-
-                                <input type='text' class='form-control' value="YYYY">
+                                @Html.TextBox(m => m.Year, new { @class = "form-control" })
+                              
 
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
                                 <label>Market ID*</label>
-
-                                <input type='text' class='form-control' value="ABCD" readonly="readonly">
+                                @Html.TextBox(m => m.MarketID, new { @class = "form-control" })
                             </div>
                             <!-- /.form-group -->
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Vendor Name*</label>
-
-                                <input type='text' class='form-control'>
-
+                                                                
+                                @Html.TextBox(m => m.VendorName, new { @class = "form-control" })
                             </div>
                             <div class="form-group">
                                 <label>Tactic Name*</label>
-
-                                <input type='text' class='form-control'>
-
+                                
+                                @Html.TextBox(m => m.TacticName, new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Child Champaign Naming*</label>
 
-                                <input type='text' class='form-control' readonly="readonly" value="ABCD">
-
+                                @Html.TextBox(m => m.ChildChampaignNaming, new { @class = "form-control" })
                             </div>
                             <div class="form-group">
                                 <label>Child Champaign Description*</label>
-
-                                <input type='text' class='form-control'>
-
+                                                            
+                                @Html.TextBox(m => m.ChildChampaignDescription, new { @class = "form-control" })
                             </div>
                         </div>
                        
